sửa nhiều thứ (trong đó có đăng ký bằng gmail)

--- a/.env
+++ b/.env
@@ -4,9 +4,10 @@ VITE_MAPBOX_TOKEN=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3g
 # AI Music Generation API
 VITE_AIML_API_KEY=5382f9a615a04c2e82e6d9f6336550c2
 
-# Supabase Configuration (if needed)
-# VITE_SUPABASE_URL=your_supabase_url
-# VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+# Supabase Configuration
+VITE_SUPABASE_URL=https://your-actual-project-id.supabase.co
+VITE_SUPABASE_ANON_KEY=your-actual-anon-key
+VITE_APP_URL=https://viviet.locaith.com
 
 # Email Configuration (for contact forms)
 # VITE_EMAIL_SERVICE_ID=your_email_service_id
