--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,52 @@
 # Supabase Configuration
-VITE_SUPABASE_URL=your-supabase-url
-VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
+# Copy this file to .env and fill in your actual Supabase credentials
 
-# Google Gemini API
-VITE_GEMINI_API_KEY=your-gemini-api-key
+# Mapbox Configuration
+VITE_MAPBOX_TOKEN=YOUR_MAPBOX_TOKEN_HERE
 
-# MongoDB Staging (for homestay sync script)
-STAGING_MONGO_URI=mongodb://localhost:27017/taxua_staging
+# Google Maps Configuration
+VITE_GOOGLE_MAPS_API_KEY=YOUR_GOOGLE_MAPS_API_KEY_HERE
+
+# AI Music Generation API
+VITE_AIML_API_KEY=YOUR_AIML_API_KEY_HERE
+
+VITE_SUPABASE_URL=https://your-project-id.supabase.co
+VITE_SUPABASE_ANON_KEY=your-anon-key-here
+VITE_APP_URL=http://localhost:8080
+
+# Email Configuration (for contact forms)
+# Add your email service configuration here
+
+# Instructions:
+# 1. Go to https://supabase.com and create a new project
+# 2. Go to Settings > API in your Supabase dashboard
+# 3. Copy the Project URL and paste it as VITE_SUPABASE_URL
+# 4. Copy the anon/public key and paste it as VITE_SUPABASE_ANON_KEY
+# 5. Create a .env file in the root directory and add these variables with your actual values
+
+# Database Schema:
+# You'll need to create a 'profiles' table in your Supabase database with the following structure:
+# 
+# CREATE TABLE profiles (
+#   id UUID REFERENCES auth.users(id) PRIMARY KEY,
+#   full_name TEXT NOT NULL,
+#   email TEXT NOT NULL,
+#   phone TEXT,
+#   created_at TIMESTAMP WITH TIME ZONE DEFAULT NOW(),
+#   updated_at TIMESTAMP WITH TIME ZONE DEFAULT NOW()
+# );
+#
+# -- Enable Row Level Security
+# ALTER TABLE profiles ENABLE ROW LEVEL SECURITY;
+#
+# -- Create policy to allow users to read their own profile
+# CREATE POLICY "Users can view own profile" ON profiles
+#   FOR SELECT USING (auth.uid() = id);
+#
+# -- Create policy to allow users to insert their own profile
+# CREATE POLICY "Users can insert own profile" ON profiles
+#   FOR INSERT WITH CHECK (auth.uid() = id);
+#
+# -- Create policy to allow users to update their own profile
+# CREATE POLICY "Users can update own profile" ON profiles
+#   FOR UPDATE USING (auth.uid() = id);
