Cập nhật Khám phá

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,8 @@ VITE_AIML_API_KEY=YOUR_AIML_API_KEY_HERE
 
 VITE_SUPABASE_URL=https://your-project-id.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key-here
-VITE_APP_URL=http://localhost:8080
+# Base URL for auth redirects; on Vercel set this to your production domain
+VITE_APP_URL=http://localhost:5173
 
 # Email Configuration (for contact forms)
 # Add your email service configuration here
